--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     rel="stylesheet">
     
     <link rel="stylesheet" href="css/styles.css">
+      
   </head>
   <body>
     <header class="main-header">
@@ -60,7 +61,7 @@
 
 	  <section id="section_portfolio">
 		<h2>Portfolio</h2>
-		<!-- bingung isi apa -->
+		<!-- Portfolio -->
 	  </section>
 
 	  <section id="section_profile">
