--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body>
     <header class="main-header">
 <div class="logo-icon">
+  <img src="assets/my-logo.png">
       </div>
 	  <nav id="top_nav"class="nav-header">
 		<ul>
