--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div id="welcome-popup">
     <h2 class="selamat-datang">Selamat Datang!</h2>
     <form id="welcome-form">
-        <label for="welcome_name">Masukkan Nama Anda:</label>
+        <label for="welcome_name">Masukkan Nama:</label>
         <input type="text" id="welcome_name" name="welcome_name" required>
         <button type="submit" id="submit_welcome">Submit</button>
     </form>
@@ -63,17 +63,41 @@
 	  </section>
 
 	  <section id="section_portfolio">
-		<h2>Portfolio</h2>
-		<!-- Portfolio -->
-	  </section>
+    <h2 class="color-accent-2">Portfolio</h2>
+    <div class="portfolio-container">
+        <div class="portfolio-item">
+            <div id="portfolio-img1" class="portfolio-img-content"></div>
+            <h3 class="color-accent-2">Project 1: AAA</h3>
+            <p>Balabala blabla bbla babbal bababllab ba bla alaba</p>
+        </div>
+        <div class="portfolio-item">
+            <div id="portfolio-img2" class="portfolio-img-content"></div>
+            <h3 class="color-accent-2">Project 2: A I U E O</h3>
+            <p>lorem ipsum amk! Namak Jwowuwjnw jsa Ceounsn AnamkJw Jaabba</p>
+        </div>
+        <div class="portfolio-item">
+          <div id="portfolio-img3" class="portfolio-img-content"></div>
+            <h3 class="color-accent-2">Project 3: WoiOw</h3>
+            <p>hYaan Aiuab Bahauau anannaj ahuWh ahaUaAuGAHA jaija Uwtw</p>
+        </div>
+    </div>
+</section>
 
-	  <section id="section_profile">
-		<h2>Our <span class="color-accent-2">Profile</span></h2>
-		<!-- Isi profile social media nanti-->
-	  </section>
+<section id="section_profile">
+    <h2 class="color-accent-2">Our Profile</h2>
+    <div class="profile-container">
+        <p><strong>Sejarah:</strong>Perusahaan Fufufafa didirikan pada tahun
+        6969 dengan tujuan memberikan solusi inovatif.</p>
+        <p><strong>Visi:</strong> Menjadi pemimpin Wakanda,
+        membuat solusi free lunch.</p>
+        <p><strong>Misi:</strong> Menggunakan program free lunch(syart&ketentuan berlaku) untuk menciptakan
+        solusi yang mendukung keberlanjutan generasi&copy; emas.</p>
+    </div>
+</section>
+
 	  
 	  <section id="section_contact">
-		<h2>Message <span class="color-accent-2">Us</span></h2>
+		<h2 class="color-accent-2">Message Us</h2>
 		<div class="contact_container">
 		<form id="contactForm">
 		  <label for="nama">Nama:</label>
@@ -97,7 +121,7 @@
 		</form>
 
 		<div class="table-container">
-		  <h3>Submitted <span class="color-accent-2">Data</span></h3>
+		  <h3 class="color-accent-2">Submitted Data</h3>
 		  <div class="table-actions">
 			<button id="editButton" disabled>Edit</button>
 			<button id="deleteButton" disabled>Hapus</button>
