design ui | portfolio  | profile | contact

--- a/index.html
+++ b/index.html
@@ -67,18 +67,24 @@
     <div class="portfolio-container">
         <div class="portfolio-item">
             <div id="portfolio-img1" class="portfolio-img-content"></div>
+            <div class="portfolio-text-container">
             <h3 class="color-accent-2">Project 1: AAA</h3>
             <p>Balabala blabla bbla babbal bababllab ba bla alaba</p>
+            </div>
         </div>
         <div class="portfolio-item">
             <div id="portfolio-img2" class="portfolio-img-content"></div>
+            <div class="portfolio-text-container">
             <h3 class="color-accent-2">Project 2: A I U E O</h3>
             <p>lorem ipsum amk! Namak Jwowuwjnw jsa Ceounsn AnamkJw Jaabba</p>
+            </div>
         </div>
         <div class="portfolio-item">
           <div id="portfolio-img3" class="portfolio-img-content"></div>
+            <div class="portfolio-text-container">
             <h3 class="color-accent-2">Project 3: WoiOw</h3>
             <p>hYaan Aiuab Bahauau anannaj ahuWh ahaUaAuGAHA jaija Uwtw</p>
+            </div>
         </div>
     </div>
 </section>
