add portfolio img container | PIC

--- a/index.html
+++ b/index.html
@@ -66,23 +66,40 @@
     <h2 class="color-accent-2">Portfolio</h2>
     <div class="portfolio-container">
         <div class="portfolio-item">
+          <div class="PIC-container">
             <div id="portfolio-img1" class="portfolio-img-content"></div>
+            <div class="box-center">
+            <h1 class="color-accent">Free lunch</h1>
+            </div>
+            </div>
             <div class="portfolio-text-container">
-            <h3 class="color-accent-2">Project 1: AAA</h3>
+            <h3 class="color-accent-2">Project 1: Free lunch</h3>
             <p>Balabala blabla bbla babbal bababllab ba bla alaba</p>
             </div>
         </div>
         <div class="portfolio-item">
+            <div class="PIC-container">
             <div id="portfolio-img2" class="portfolio-img-content"></div>
+            <div class="box-center">
+            <h1 class="color-accent">IKN</h1>
+            </div>
+            </div>
             <div class="portfolio-text-container">
-            <h3 class="color-accent-2">Project 2: A I U E O</h3>
+            <h1 class="color-accent-2">Project 2: IKN</h1>
             <p>lorem ipsum amk! Namak Jwowuwjnw jsa Ceounsn AnamkJw Jaabba</p>
             </div>
         </div>
         <div class="portfolio-item">
-          <div id="portfolio-img3" class="portfolio-img-content"></div>
+          <div class="PIC-container">
+            <div id="portfolio-img3" class="portfolio-img-content"></div>
+            <div class="box-center">
+            <h1 class="color-accent">Tapera</h1>
+            </div>
+            </div>
             <div class="portfolio-text-container">
-            <h3 class="color-accent-2">Project 3: WoiOw</h3>
+              <div class="box-center">
+            <h1 class="color-accent-2">Project 3: Tapera</h1>
+            </div>
             <p>hYaan Aiuab Bahauau anannaj ahuWh ahaUaAuGAHA jaija Uwtw</p>
             </div>
         </div>
